# Gravediggers-MPI

./: CMakeLists.txt  README.md  app.c  machines  makefile  run.bat  run.sh
config/: hosts.conf
src/: autoload.h  config.h  gravediggers.cpp
src/debugger/: Debugger.cpp  Debugger.h
src/distributor/: Distributor.cpp  Distributor.h  DistributorStructs.h
src/entity/: Corpse.cpp  Corpse.h
src/monitor/: Monitor.cpp  Monitor.h
src/process/: CityCouncil.cpp  CityCouncil.h  FuneralHome.cpp  FuneralHome.h
